@@ -1,14 +1,12 @@
 package net.coderextreme.icbm;
 
-import java.rmi.*;
-import java.io.*;
-import java.rmi.registry.*;
+import java.io.File;
 
 public class MUDServer extends MUDClient {
 	public MUDServer(String args[]) {
 		super();
 		try {
-			rmi = Runtime.getRuntime().exec(System.getProperty("java.home")+File.separator+"bin"+File.separator+"rmiregistry 1099");
+			rmi = Runtime.getRuntime().exec(new String[] { System.getProperty("java.home")+File.separator+"bin"+File.separator+"rmiregistry", "1099" });
 			Thread.sleep(3000);
 			System.out.println("RMI registry started on port 1099");
 		} catch (Exception e) {
